test(alert): keep sink test Java-compatible